Correction du bug des filtres et remplacement de la couleur pour qu'il y ai un meilleur contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,9 +100,9 @@ body {
 .gallery .nav {
 	justify-content: center;
 }
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+.nav-pills .nav-link.active-tag, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #7c7940;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
@@ -353,4 +353,3 @@ input[type="submit"] {
 		width: 80%;
 	}
 }
-
